welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:10: error: ';' expected but 'if' found.
		} if (T(i-1)==nb) {T(i)=T(i-1)+1}
                  ^